--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 
 body {
-    background-image: url(src/Background.jpg);
+    background-image: url(https://media.tenor.com/JD7e1QQ6bCwAAAAC/aesthetic-pink.gif);
     background-size:cover;
     background-repeat:repeat;
     background-attachment: fixed;
